--- a/views/videouploader.tpl.html
+++ b/views/videouploader.tpl.html
@@ -1,17 +1,27 @@
 
 <div>
-			<span ngf-select 
-						ng-model="fileToUpload" 
-						class="btn btn-success fileinput-button" 
-						ng-class="{disabled: disabled}"
-						accept="video/*"
-						ngf-pattern="'video/*'"
-			>
+	<form id="fileupload" action="{{uploadUrl}}" method="POST" enctype="multipart/form-data">
+			<span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}">
           <i class="glyphicon glyphicon-plus"></i>
           <span>Select a file to upload</span>
-          <!-- <input type="file" name="files[]"> -->
+          <input type="file" name="files[]">
       </span>
-      {{fileToUpload.name}}
-      <div ng-bind="progressPercentage"></div>
-      <button class="btn btn-primary" ng-click="upload(fileToUpload)">Upload</button>
+	</form>
+	<br>
+	<div  class="progress">
+	  <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+	  </div>
+	</div>
+
+
+
+<div ng-if="showConverting" class="alert alert-info" role="alert">Video is converting. Please wait</div><br>
+<div ng-if="uploadError" class="alert alert-danger" role="alert"><span ng-bind="errorReason"></span></div><br>
+
+<div ng-repeat="hash in uploadedHashes">
+	<div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><iframe ng-src="{{hash}}" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="100%" height="100%"></iframe></div></div>
+	<script src="//fast.wistia.net/assets/external/E-v1.js" async></script>
+</div>
+<br>
+
 </div>
